# Midas

./: .codeclimate.yml  .coveralls.yml  .editorconfig  .eslintignore  .eslintrc  .gitignore  .htaccess  .php_cs  .scss-lint.yml  .styleci.yml  .travis.yml  AUTHORS  CMakeLists.txt  COPYRIGHT  COPYRIGHT.txt  CTestConfig.cmake  LICENSE.txt  README.md  README.txt  Vagrantfile  app.yaml  bower.json  composer.json  cron-sample.yaml  cron.yaml  include.php  index.php  mkdocs.yml  php.ini  phpunit.xml.dist
core/tests/: CMakeLists.txt
core/tests/controllers/: AdminControllerTest.php  AssetstoreControllerTest.php  BrowseControllerTest.php  CMakeLists.txt  CommunityControllerTest.php  FeedControllerTest.php  FolderControllerTest.php  ImportControllerTest.php  IndexControllerTest.php  ItemControllerTest.php  LicenseControllerTest.php  LicensesControllerTest.php  SearchControllerTest.php  ShareControllerTest.php  UploadControllerTest.php  UploadDownloadControllerTest.php  UserControllerTest.php
core/tests/controllers/api/: CMakeLists.txt  RestCallItemMethodsTest.php  RestCallMethodsTest.php  RestCallMethodsTestCase.php  RestCallUserMethodsTest.php  RestKeyControllerTest.php
core/tests/controllers/components/: CMakeLists.txt  ExportComponentTest.php  UtilityComponentTest.php
core/tests/databaseDataset/: activedownload.xml  adminUser.xml  default.xml  metadata.xml  policies.xml  search.xml  treeIndexes.xml  treeIndices.xml  userapi.xml
core/tests/models/: CMakeLists.txt
core/tests/models/base/: AssetstoreModelTest.php  CMakeLists.txt  CommunityModelTest.php  FeedModelTest.php  FeedpolicygroupModelTest.php  FeedpolicyuserModelTest.php  FolderModelTest.php  FolderpolicygroupModelTest.php  FolderpolicyuserModelTest.php  GroupModelTest.php  ItemModelTest.php  ItempolicygroupModelTest.php  ItempolicyuserModelTest.php  MetadataModelTest.php  TreeIndexesTest.php  TreeIndicesTest.php  UserModelTest.php
core/tests/models/dao/: CMakeLists.txt  FeedDaoTest.php  UserDaoTest.php
modules/api/tests/: CMakeLists.txt
modules/api/tests/controllers/: ApiCallCommunityMethodsTest.php  ApiCallFolderMethodsTest.php  ApiCallGroupMethodsTest.php  ApiCallItemMethodsTest.php  ApiCallMethodsTest.php  ApiCallMiscMethodsTest.php  ApiCallUserMethodsTest.php  ApiIndexControllerTest.php  ApiKeyControllerTest.php  CMakeLists.txt  CallCommunityMethodsTest.php  CallFolderMethodsTest.php  CallGroupMethodsTest.php  CallItemMethodsTest.php  CallMethodsTestCase.php  CallMiscMethodsTest.php  CallUserMethodsTest.php  IndexControllerTest.php  KeyControllerTest.php
modules/api/tests/databaseDataset/: default.xml
modules/archive/tests/: CMakeLists.txt
modules/archive/tests/controllers/: ArchiveExtractControllerTest.php  CMakeLists.txt  ExtractControllerTest.php
modules/batchmake/tests/: CMakeLists.txt  README
modules/batchmake/tests/controllers/: AdminControllerTest.php  BatchmakeControllerTest.php  CMakeLists.txt  ConfigControllerTest  ConfigControllerTest.php  ControllerTestCase.php  IndexControllerTest.php
modules/batchmake/tests/databaseDataset/: default.xml
modules/batchmake/tests/models/: CMakeLists.txt
modules/cleanup/tests/: CMakeLists.txt
modules/cleanup/tests/controllers/: CMakeLists.txt  CleanupPerformTest.php  PerformCleanupTest.php
modules/cleanup/tests/databaseDataset/: default.xml
modules/communityagreement/tests/: CMakeLists.txt
modules/communityagreement/tests/controllers/: CMakeLists.txt  CommunityControllerTest.php  ConfigControllerTest.php
modules/communityagreement/tests/databaseDataset/: default.xml
modules/communityagreement/tests/models/: CMakeLists.txt
modules/helloworld/tests/models/: CMakeLists.txt
modules/keyfiles/tests/: CMakeLists.txt
modules/keyfiles/tests/controllers/: CMakeLists.txt  DownloadControllerTest.php  KeyfilesDownloadControllerTest.php
modules/oauth/tests/: CMakeLists.txt
modules/oauth/tests/controllers/: AuthorizeControllerTest.php  CMakeLists.txt  ClientControllerTest.php  TokenControllerTest.php
modules/oauth/tests/databaseDataset/: default.xml
modules/remoteprocessing/tests/: ApiTest.php  CMakeLists.txt
modules/remoteprocessing/tests/controllers/: ApiComponentControllerTest.php  CMakeLists.txt  ConfigControllerTest.php  DashboardControllerTest.php  ExecutableControllerTest.php  JobControllerTest.php
modules/remoteprocessing/tests/databaseDataset/: default.xml
modules/remoteprocessing/tests/models/: CMakeLists.txt
modules/sizequota/tests/: CMakeLists.txt
modules/sizequota/tests/controllers/: CMakeLists.txt  ConfigControllerTest.php  FolderControllerTest.php
modules/sizequota/tests/databaseDataset/: default.xml
modules/sizequota/tests/models/: CMakeLists.txt
modules/statistics/tests/: CMakeLists.txt
modules/statistics/tests/controllers/: CMakeLists.txt  GeolocationLookupTest.php  OfflineGeolocationTest.php  StatisticsGeolocationLookupTest.php
modules/statistics/tests/databaseDataset/: default.xml
modules/statistics/tests/models/: CMakeLists.txt  DownloadModelTest.php  StatisticsDownloadModelTest.php
modules/validation/tests/: CMakeLists.txt
tests/: .gitignore  CMakeLists.txt  ControllerTestCase.php  DatabaseSetup.php  DatabaseTestCase.php  KWUtilsTest.php  PHPUnitMySQL.php  PHPUnitPgSQL.php  PHPUnitSQLite.php  TestsBootstrap.php  TestsConfig.php.in  TrailingSpaces.php  UTF8Tools.php  Utf8tools.php  bootstrap.php  ncss.xml  phpcheckstyle.cfg.xml  phpunit.xml  styleCheck.php
tests/application/: ControllerTestCase.php  DatabaseTestCase.php
tests/ci/jenkins/: mysql.ini  pgsql.ini  sqlite.ini
tests/ci/travis/: mysql.ini  pgsql.ini  sqlite.ini
tests/ci/vagrant/: mysql.ini  pgsql.ini  sqlite.ini
tests/configs/: mysql.ini  pgsql.ini
tests/core/: CMakeLists.txt  ControllerTestCase.php  DatabaseTestCase.php
tests/core/controllers/: CMakeLists.txt  FeedControllerTest.php  IndexControllerTest.php  UploadControllerTest.php  UserControllerTest.php
tests/core/models/: CMakeLists.txt
tests/core/models/base/: CMakeLists.txt  (+5 more)
tests/databaseDataset/: default.xml
tests/travis/: mysql.ini  pgsql.ini  sqlite.ini
(+2275 files in other folders)
