add_midas_test( IndexController IndexControllerTest.php )
add_midas_test( FeedController FeedControllerTest.php )
add_midas_test( UserController UserControllerTest.php )
add_midas_test( UploadController UploadControllerTest.php )

add_subdirectory( components )


# Syle
add_midas_style_test( StyleCoreControllerComponents ${CMAKE_SOURCE_DIR}/core/controllers/components )
add_midas_style_test( StyleCoreControllerForms ${CMAKE_SOURCE_DIR}/core/controllers/forms )
add_midas_style_test( StyleCoreAdminController ${CMAKE_SOURCE_DIR}/core/controllers/AdminController.php )
add_midas_style_test( StyleCoreAssetstoreController ${CMAKE_SOURCE_DIR}/core/controllers/AssetstoreController.php )
add_midas_style_test( StyleCoreBrowseController ${CMAKE_SOURCE_DIR}/core/controllers/BrowseController.php )
add_midas_style_test( StyleCoreCommunityController ${CMAKE_SOURCE_DIR}/core/controllers/CommunityController.php )
add_midas_style_test( StyleCoreDownloadController ${CMAKE_SOURCE_DIR}/core/controllers/DownloadController.php )
add_midas_style_test( StyleCoreErrorController ${CMAKE_SOURCE_DIR}/core/controllers/ErrorController.php )
add_midas_style_test( StyleCoreFeedController ${CMAKE_SOURCE_DIR}/core/controllers/FeedController.php )
add_midas_style_test( StyleCoreFolderController ${CMAKE_SOURCE_DIR}/core/controllers/FolderController.php )
add_midas_style_test( StyleCoreImportController ${CMAKE_SOURCE_DIR}/core/controllers/ImportController.php )
add_midas_style_test( StyleCoreIndexController ${CMAKE_SOURCE_DIR}/core/controllers/IndexController.php )
add_midas_style_test( StyleCoreInstallController ${CMAKE_SOURCE_DIR}/core/controllers/InstallController.php )
add_midas_style_test( StyleCoreItemController ${CMAKE_SOURCE_DIR}/core/controllers/ItemController.php )
add_midas_style_test( StyleCoreSearchController ${CMAKE_SOURCE_DIR}/core/controllers/SearchController.php )
add_midas_style_test( StyleCoreShareController ${CMAKE_SOURCE_DIR}/core/controllers/ShareController.php )
add_midas_style_test( StyleCoreUploadController ${CMAKE_SOURCE_DIR}/core/controllers/UploadController.php )
add_midas_style_test( StyleCoreUserController ${CMAKE_SOURCE_DIR}/core/controllers/UserController.php )